BUILD: Simplified build file - FIX: Build using vaadin gradle plugin